# Pogchamp

./: .gitattributes  Level.hs  Setup.hi  cabal.sandbox.config  gloss-counter.cabal  highscore.txt
.cabal-sandbox/x86_64-windows-ghc-8.2.1-packages.conf.d/: bmp-1.2.6.3-4lpOZe3CN513AkDIDZBJnf.conf  gloss-1.13.0.1-2y6K3DzCGO5IrS0RnUFTQG.conf  gloss-rendering-1.13.0.2-4KMgu5Zw6CHAfkEAginI81.conf  package.cache
.cabal-sandbox/x86_64-windows-ghc-8.2.1/bmp-1.2.6.3-4lpOZe3CN513AkDIDZBJnf/Codec/: BMP.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/bmp-1.2.6.3-4lpOZe3CN513AkDIDZBJnf/Codec/BMP/: Base.hi  BitmapInfo.hi  BitmapInfoV3.hi  BitmapInfoV4.hi  BitmapInfoV5.hi  CIEXYZ.hi  Compression.hi  Error.hi  FileHeader.hi  Pack.hi  Unpack.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/gloss-1.13.0.1-2y6K3DzCGO5IrS0RnUFTQG/Graphics/: Gloss.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/gloss-1.13.0.1-2y6K3DzCGO5IrS0RnUFTQG/Graphics/Gloss/Data/: Bitmap.hi  Color.hi  Controller.hi  Display.hi  Picture.hi  Point.hi  Vector.hi  ViewPort.hi  ViewState.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/gloss-1.13.0.1-2y6K3DzCGO5IrS0RnUFTQG/Graphics/Gloss/Geometry/: Angle.hi  Line.hi
.cabal-sandbox/x86_64-windows-ghc-8.2.1/gloss-rendering-1.13.0.2-4KMgu5Zw6CHAfkEAginI81/Graphics/Gloss/: Rendering.hi
RUN ONCE AND SET THESE INTO APPDATA ROAMING PACMAN FILE/: grid.txt
gloss-1.13.0.1/: gloss.cabal
levels/: level1.txt
random-1.1/: random.cabal
src/: Controller.hs  Enemy.hs  Level.hs  Main.hs  Model.hs  Movement.hs  Pacman.hs  Variables.hs  View.hs
(+40 files in other folders)
