name:                gloss-counter
version:             0.1.0.0
license-file:        LICENSE
author:              Alejandro Serrano
maintainer:          A.SerranoMena@uu.nl
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable gloss-counter
  main-is:             Main.hs
  other-modules:       Controller, Model, View
  build-depends:       base >= 4 && < 5,
                       gloss,
                       random,
                       GLUT,
                       StateVar,
                       bytestring,
                       directory
  hs-source-dirs:      src
  ghc-options:         
    -threaded
    -fprof-auto
    -rtsopts
    -with-rtsopts=-N
  ghc-prof-options: "-with-rtsopts=-p -s -h -i0.1 -N"
  default-language:    Haskell2010